# ODBP

./: .gitignore  3d.py  CHANGELOG.md  GETTING_STARTED.md  LICENSE  README.md  new_ext_getsets.py  pyproject.toml
removed_or_to_reimplement/2d/: odb.py
removed_or_to_reimplement/cli/: README.md  cli.py
removed_or_to_reimplement/extraction/: odb.py
src/odbp/: __init__.py  __main__.py  base_odb.py  cli.py  config.toml  convert.py  data_model.py  extract.py  magic.py  npz_to_hdf.py  odb.py  odb_settings.py  odb_to_npz.py  odb_visualizer.py  odbp.py  odbp_settings.py  process_input.py  read_hdf5.py  reader.py  state.py  types.py  util.py  views.json  views.toml  writer.py
src/odbp/data/: config.toml  odbp_views.toml  views.toml  views_old.toml
src/odbp/py2_scripts/: converter.py  extract.py  extractor.py  odb_info_getter.py  odb_to_npz.py  show_state.py  state_collector.py
